--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -90,7 +90,7 @@ input, select, textarea {
 	}
 
 	body {
-		background: #365975;
+		background: #365975cb;
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -135,11 +135,11 @@ input, select, textarea {
 		}
 
 	body, input, select, textarea {
-		color: #83d3bf;
+		color: #cad5d2;
 		font-family: "Source Sans Pro", sans-serif;
 		font-weight: 300;
 		font-size: 1rem;
-		line-height: 1.65;
+		line-height: 1.45;
 	}
 
 	a {
@@ -255,7 +255,7 @@ input, select, textarea {
 	}
 
 	code {
-		background: rgba(255, 255, 255, 0.075);
+		background: rgba(255, 255, 255, 0.144);
 		border-radius: 4px;
 		font-family: "Courier New", monospace;
 		font-size: 0.9rem;
@@ -641,7 +641,7 @@ input, select, textarea {
 
 		.image:before {
 			pointer-events: none;
-			background-image: url("../../images/overlay.png");
+			background-image: url("../../images/fundo.jpg");
 			background-color: rgba(19, 21, 25, 0.5);
 			border-radius: 4px;
 			content: '';
@@ -1134,8 +1134,8 @@ input, select, textarea {
 			-webkit-transition-delay: 0.75s;
 			-ms-transition-delay: 0.75s;
 			transition-delay: 0.75s;
-			background-image: linear-gradient(to top, rgba(19, 21, 25, 0.5), rgba(19, 21, 25, 0.5)), url("../../images/overlay.png");
-			background-size: auto,
+			background-image: url("../../images/fundo.jpg");
+			background-size: cover,
  256px 256px;
 			background-position: center,
  center;
@@ -1153,7 +1153,7 @@ input, select, textarea {
 			-webkit-transition: -webkit-transform 0.325s ease-in-out, -webkit-filter 0.325s ease-in-out;
 			-ms-transition: -ms-transform 0.325s ease-in-out, -ms-filter 0.325s ease-in-out;
 			transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out;
-			background-image: url("../../images/bg.jpg");
+			background-image: url("../../images/fundo.jpg");
 			background-position: center;
 			background-size: cover;
 			background-repeat: no-repeat;
